--- a/styles.css
+++ b/styles.css
@@ -87,15 +87,29 @@ form {
 
 #counter {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 20px;
+  right: 20px;
 }
 
 .options-container {
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 2rem;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.options-container div {
+  display: flex;
+  align-items: center;
   gap: 1rem;
 }
 
 .quiz {
   width: 90%;
+  text-align: center;
+}
+
+input[type="radio"] {
 }
